<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTitulo" />

        <EditText
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAutor" />

        <EditText
            android:id="@+id/txt_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGenero" />

        <EditText
            android:id="@+id/txt_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textCodISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCodigoISBN" />

        <EditText
            android:id="@+id/txt_cod_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textLibrosDisponibles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLibrosDisponibles" />

        <EditText
            android:id="@+id/txt_cant_disp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textLibrosOCupados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLibrosOcupados" />

        <EditText
            android:id="@+id/txt_cant_ocup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnVolver" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnGuardar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>